default port for https

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+#server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:3306/portfolio_web_app}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
